--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </div>
 
         <div class="barcode-container">
-            <img src="img/fondo.png" alt="" class="background-image" style="display:none;">
+            <img src="fondo.png" alt="" class="background-image" style="display:none;">
             <img id="barcodeImage" class="imgbarra" alt='Barcode Generator TEC-IT'
                 src='https://barcode.tec-it.com/barcode.ashx?data=ABC-abc-1234&code=Code128&translate-esc=on'
                 style="display:none;" />
