--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instituto Franklin Roosevelt</title>
 <style>
+        body{
+            width: 1300px;
+        }
         .title {
             color: #333;
             font-size: 24px;
@@ -170,7 +173,7 @@
             var img1 = new Image();
             var img2 = new Image();
 
-            img1.src = 'img/fondo.png'; // Primera imagen
+            img1.src = 'fondo.png'; // Primera imagen
             img2.src = 'https://barcode.tec-it.com/barcode.ashx?data=' + encodeURIComponent(userInput) + '&code=Code128&translate-esc=on&size=200'; // Segunda imagen (código de barras)
 
             img1.onload = function () {
