--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <style>
         body{
             width: 1300px;
+            margin: auto;
         }
         .title {
             color: #333;
